src/snapshots/packet_sniffer__app__tests__snapshot_select_interface.snap
---
source: src/app.rs
assertion_line: 227
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "┌Select Interface──────────────────────────────────────────────────────────────┐",
        "│> 1: eth0                                                                     │",
        "│  2: lo                                                                       │",
        "│  3: wlan0                                                                    │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "↑↓ to select, Enter to confirm, q to quit                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
